# CRYPTOQUANT

./: .gitignore  Dockerfile  README.md  TODO.md  alembic.ini  app.py  check_ohlcv.py  check_paths.py  check_tables.py  crypto.db  dashboard.py  docker-compose.base.yml  docker-compose.yml  init_db.py  initialize_env.py  insert_sample_assets.py  launch_dashboard.py  pyproject.toml  railway.json  recreate_symbols.py  render.yaml  render_api_only.yaml  requirements.txt  run_dashboard.py  setup.py  start_dashboard.py  start_portfolio_service.py  test_imports.py  update_symbols.py
.github/workflows/: ci-cd.yml  deploy.yml
app/: config.py  crypto.db
app/analytics/: cointegration.py  correlation.py  pairs.py  persist.py  portfolio.py  preprocess.py  risk.py  rolling.py  run_analytics.py  spread.py  stats.py
app/analytics/portfolio/: __init__.py  data_loader.py  fundamentals.py  metrics.py  optimization.py  optimizer.py  performance.py  portfolio_spread.py  rebalance.py  risk.py
app/api/: main.py
app/api/routes/: analytics.py  assets.py  auth.py  crypto.py  ohlcv.py  portfolio.py
app/api/security/: auth.py
app/dashboard/: __init__.py  api_client.py  app.py  visuals.py
app/dashboard/components/: cointeg_chart.py  heatmap.py  portfolio_manager.py  zscore_plot.py  (+1 more)
app/db/: crypto.db  engine.py  init_db.py  models.py  schema.py
app/etl/: fetchers.py  retry.py  run_etl.py  sync_symbols.py  upsert.py  validation.py
app/monitoring/: metrics.py
app/workers/: celery_app.py  portfolio_update.py
deprecated/: portfolio_analytics_backup.py
prometheus/: prometheus.yml
(+23 files in other folders)
