[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-quant"
version = "1.0.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A cryptocurrency quantitative analysis platform"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = false